[package]
name = "network-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtnetlink = "0.12.0"
futures = "0.3.11"
netlink-packet-route = { version = "0.15" }
tokio = { version = "1.28.1", features = ["full"] }
log = "0.4.8"
env_logger = "0.8.2"